#--------------------------------------------------------------------------
# File and Version Information:
#  $Id:$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-43
2018-11-27 Mikhail S. Dubrovin
	modified:   src/GlobalUtils.py - minor addition in log_rec_on_start
	modified:   src/NDArrIO.py - do not reshape input array.

Tag: V01-00-42
2018-11-15 Mikhail S. Dubrovin
- fix y axis direction in SegGeometryEpix10kaV1.py

Tag: V01-00-41
2018-11-14 Mikhail S. Dubrovin
- Epix10kaQuad and Epix10ka2M - support for calibration constants
- add geometry of new segment SegGeometryEpix10kaV1
	modified:   src/CalibParsStore.py
	modified:   src/GlobalUtils.py
	new file:   src/SegGeometryEpix10kaV1.py
	modified:   src/SegGeometryStore.py

Tag: V01-00-40
2018-10-29 Mikhail S. Dubrovin
- add STREAK and ARCHON
	modified:   doc/ChangeLog
	modified:   src/CalibParsBaseEpix10kaV1.py
	modified:   src/CalibParsStore.py
	modified:   src/GlobalUtils.py

Tag: V01-00-39
2018-10-15 Mikhail S. Dubrovin
- src/GlobalUtils.py - add EPIX10KA2M

Tag: V01-00-38
2018-09-26 Mikhail S. Dubrovin
- uxi and pixis turn off common mode correction in default parameters
	modified:   src/CalibParsBaseCameraV1.py
	modified:   src/CalibParsBaseUxiV1.py

Tag: V01-00-37
2018-09-25 Mikhail S. Dubrovin
- add uxi and pixis
	new file:   src/CalibParsBaseUxiV1.py
	modified:   src/CalibParsStore.py
	modified:   src/GlobalUtils.py

Tag: V01-00-36 - Dan???

Tag: V01-00-35
2018-07-05 Mikhail S. Dubrovin
- add support for epix10ka in calib directory
	modified:   src/CalibParsBaseEpix10kaV1.py
	modified:   src/CalibParsBasePnccdV1.py
	modified:   src/GlobalUtils.py

Tag: V01-00-34
2018-05-07 Mikhail S. Dubrovin
- add support for jungfrau Id in access constants from repository hdf5 calib file