@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-44
+2018-11-30 Mikhail S. Dubrovin
+- add DCUtils.dataset_time, protect GlobalUtils.get_enviroment
+
 Tag: V01-00-43
 2018-11-27 Mikhail S. Dubrovin
 	modified:   src/GlobalUtils.py - minor addition in log_rec_on_start
